Fixed alignment of "Add to Slack" buttons and CTAs on desktop.

--- a/public/stylesheets/layout.scss
+++ b/public/stylesheets/layout.scss
@@ -42,6 +42,10 @@ header .sign-in-to-slack {
   display: block;
   width: 139px;
   height: 40px;
+  margin: 0 auto;
+  @media screen and (max-width: $break-small) {
+    margin: 0;
+  }
 }
 
 header p {
